tests/paczka2/big_fuzzy/92575137.err
Error in line 1: 3YVLQME A288 91,5
Error in line 17: S510 S510 25,2
Error in line 19: S510 S547 83,9
Error in line 50: 0BLn A288 61,2
Error in line 52: 0BLn S510 95,1
Error in line 56: S510 A288 22,6
Error in line 58: n9BXCUqWB S182 48,7
Error in line 57: S510 S510 37,8
Error in line 54: 0BLn A288 72,5
Error in line 68: n9BXCUqWB A288 59,6
Error in line 70: LNUnwf3A S547 65,6
Error in line 100: LNUnwf3A S510 21,7
Error in line 104: 0BLn S547 443,7
Error in line 116: 0BLn S182 55,9
Error in line 119: 0BLn S510 98,2
Error in line 133: eBxCS S547 221,4
Error in line 136: eBxCS A288 81,1
Error in line 142: S510 S547 70,4
Error in line 164: HDp7 S547 33,7
Error in line 173: HDp7 S182 2,5
Error in line 176: HDp7 A288 43,7
Error in line 183: n9BXCUqWB S510 93,62
Error in line 123: LNUnwf3A S547 199,9
Error in line 184: HDp7 A288 54,2
Error in line 190: 3YVLQME S547 166,1
Error in line 201: 0BLn S510 7,1
Error in line 195: n9BXCUqWB S547 23,1
Error in line 211: n9BXCUqWB S510 1,3
Error in line 220: S510 A288 8,4
Error in line 219: eBxCS S182 7,2
Error in line 230: HDp7 S182 76,8
Error in line 236: S510 S547 26,2
